# University-Dating

./: .dockerignore  .env.example  .mutmut-cache  Dockerfile  README.md  XX:memory:XX  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml  quality.yaml
app/: main.py  ui_app.py
app/src/: ui_app.py
app/src/controllers/: auth.py  matching.py  profile.py  settings.py  status.py
app/src/dal/: database.py
app/src/enums/: interests_enum.py
app/src/models/: auth.py  like.py  profile.py  response.py
app/src/services/: auth_service.py  like_service.py  profile_service.py
app/src/ui/: home.py  login.py  matching.py
app/src/validators/: email_validator.py  profile_validator.py
tests/integration/dal/: test_database.py
tests/performance/: locustfile.py
tests/unit/: test_main.py
tests/unit/controllers/: test_auth.py  test_matching.py  test_profile.py  test_settings.py  test_status.py
tests/unit/dal/: test_database.py
tests/unit/services/: test_auth_service.py  test_like_service.py  test_profile_service.py
tests/unit/ui/: test_login.py  test_matching.py
tests/unit/validators/: test_email_validator.py  test_profile_validator.py
