[tool.poetry]
name = "university-dating"
version = "0.1.0"
description = ""
authors = [
    "Damir Nabiullin <d.nabiullin@innoplois.university>",
    "Anna Dluzhinskaya <a.dluzhinskaya@innoplois.university>",
    "Karina Tyulebaeva <k.tyulebaeva@innopolis.university>",
    "Renata Shakirova <r.shakirova@innopolis.university>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
mock = "^5.1.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
streamlit = "^1.33.0"
httpx = "^0.27.0"
bandit = {extras = ["toml"], version = "^1.7.8"}
pydantic = "^2.6.4"
google-auth = "^2.29.0"
extra-streamlit-components = "^0.1.71"
streamlit-option-menu = "^0.3.12"
flake8-pyproject = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "app"
]

[tool.coverage]
    [tool.coverage.run]
    omit = [
        # omit anything in a .local directory anywhere
        '*/.local/*',
        '__init__.py',
        'tests/*',
        '*/tests/*',
        # omit anything in a .venv directory anywhere
        '.venv/*'
    ]

    [tool.coverage.report]
    skip_empty = true

[tool.flake8]
per-file-ignores = [
    './app/src/ui/*:C901',
]